--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,37 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navigation-items {
+  list-style: none;
+  text-decoration: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
+  padding: 20px;
+}
+li {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+.weather-detail__text{
+  color: #61dafb;
+  font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+}
+h1{
+  color:#212529;
+  font-weight:bold;
+  text-align: left
+}
+.App-header {
+  background-color:blanchedalmond;
+  min-height: 100vh;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
